feat: ability to toggle "wrong channel" messages Also insult locaalization, and "SFW insults" option

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -11,5 +11,8 @@
   "stayInChannel": false,
   "timeout": 10,
   "deafen": false,
-  "game": ""
+  "game": "",
+  "channelWhitelist": [],
+  "enableInsults": true,
+  "SFWMode": true
 }
